--- a/index.html
+++ b/index.html
@@ -172,7 +172,11 @@
                </div>
                <div class="col-xl-6 col-lg-5 col-md-12">
                   <div class="tp-hero-right-img wow tpfadeRight" data-wow-duration=".9s" data-wow-delay="1.2s">
-                     <img src="images/hero-4.png" alt>
+                     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+                     
+                     
+                     <lottie-player src="https://lottie.host/1896a047-ad1f-4201-9d6a-e12ead88c604/VYzwv23d7j.json" background="transparent"
+                        speed="1" style="width: 700px; height: 700px;" loop autoplay></lottie-player>
                   </div>
                </div>
             </div>
